--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -35,7 +35,7 @@
       // save data
      // saveData(jsPsych.data.get().select('subject').values[0],jsPsych.data.get().select('email').values[0],jsPsych.data.get().csv());
       // forward to qualtrics ending survey. 
-      window.location = "https://vuw.qualtrics.com/jfe/form/SV_0kxysb20fYGMgYu?subject=" + data.subject + '&subject_email=' + data.email
+      window.location = "https://vuw.qualtrics.com/jfe/form/SV_0kxysb20fYGMgYu?subject=" + jsPsych.data.get().select('subject').values[0] + '&subject_email=' + jsPsych.data.get().select('email').values[0]
     //  window.location = 'https://figuratively-speaking.com/l2i/L2I/thankyou.html'
      // for prolific
     },
