--- a/L2I_reading.html
+++ b/L2I_reading.html
@@ -563,7 +563,7 @@ const introduction = [instructions_general, enter_fullscreen]
 const demographic_timeline = [
 
 instructions_demo, 
-name, 
+//name, 
 age, 
 handedness,
 sex,
