--- a/L2I_reading_nes.html
+++ b/L2I_reading_nes.html
@@ -31,8 +31,7 @@
     on_finish: function(data){
    
         // redirect to prolific
-      window.location = "https://vuw.qualtrics.com/jfe/form/SV_1OcaG7p44u97zO6?subject=" + jsPsych.data.get().select('subject').values[0] + '&subject_email=' + jsPsych.data.get().select('email').values[0]
-     // for prolific
+       window.location =  'https://app.prolific.co/submissions/complete?cc=CAJV42W8'
     },
   });
   </script>
