--- a/L2I_reading_J.html
+++ b/L2I_reading_J.html
@@ -605,11 +605,11 @@ timeline.push(
   browser_check,  
   information_sheet,
  consent,
- ...introduction,
-...demographic_timeline,
-  ...irony_timeline,
+ //...introduction,
+//...demographic_timeline,
+ // ...irony_timeline,
  ...ctest_timeline,
-  ...lextale_timeline,
+  //...lextale_timeline,
   save_buffer,
   end_experiment
 );
