--- a/L2I_reading_PL.html
+++ b/L2I_reading_PL.html
@@ -82,9 +82,11 @@ const information_sheet = {
       jsPsych.data.addProperties({first_name: jsPsych.data.getURLVariable('fn')})
       jsPsych.data.addProperties({family_name: jsPsych.data.getURLVariable('sn')})
       jsPsych.data.addProperties({email: jsPsych.data.getURLVariable('em')})
-      jsPsych.data.addProperties({subject:  jsPsych.data.getURLVariable('fn').concat('_', jsPsych.data.getURLVariable('sn'), '_', performance.now())}),
+      jsPsych.data.addProperties({subject:  jsPsych.data.getURLVariable('fn').concat('_', jsPsych.data.getURLVariable('sn'), '_', performance.now())})
+      jsPsych.data.addProperties({university: jsPsych.data.getURLVariable('uni')}),
       console.log(data.subject)
       console.log(data.email)
+      console.log(data.university)
      // createData(data.subject, data.email)
     
     }
