--- a/L2I_reading_J.html
+++ b/L2I_reading_J.html
@@ -82,11 +82,10 @@ const information_sheet = {
       jsPsych.data.addProperties({first_name: jsPsych.data.getURLVariable('fn')})
       jsPsych.data.addProperties({family_name: jsPsych.data.getURLVariable('sn')})
       jsPsych.data.addProperties({email: jsPsych.data.getURLVariable('em')})
-      jsPsych.data.addProperties({subject:  jsPsych.data.getURLVariable('fn').concat('_', jsPsych.data.getURLVariable('sn'), '_', performance.now())}),
-      console.log(data.subject)
-      console.log(data.email)
+      jsPsych.data.addProperties({subject:  jsPsych.data.getURLVariable('fn').concat('_', jsPsych.data.getURLVariable('sn'), '_', performance.now())}) 
+      jsPsych.data.addProperties({university: jsPsych.data.getURLVariable('uni')}),
+      console.log(jsPsych.data.get())
      // createData(data.subject, data.email)
-    
     }
 	};
 
