--- a/L2I_reading_D.html
+++ b/L2I_reading_D.html
@@ -18,7 +18,7 @@
   <script src="jspsych/plugin-preload.js"></script>
   <script src='lextale_stimuli.js'></script>
   <script src='irony_stim.js'></script>
-  <script src = 'info_sheet_JP.js'></script>
+  <script src = 'info_sheet_D.js'></script>
   <script src = 'helper_functions1.js'></script>
   <link href = "jspsych/jspsych.css" rel="stylesheet" type = "text/css" />
 
